Notepad saving and file explorer